apps/foundry-vtt-kf/base/foundry-vtt-kf-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundry-vtt-kf-ingress
  namespace: foundry-vtt-kf
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kaiga.sakagegaming.com`) 
      services:
        - kind: Service
          name: foundry-vtt-kf
          passHostHeader: true
          port: 80
